# tech-blogs-newsletter

./: Makefile  README.md  pyproject.toml
.github/workflows/: scheduled_execution.yml
tech_blogs_newsletter/: domain.py  main.py
tech_blogs_newsletter/notification/: email.py
tech_blogs_newsletter/sources/: medium.py
tech_blogs_newsletter/tech_blogs/: __init__.py  base.py  netflix.py
tests/system/: test_main.py
tests/system/tech_blogs/: test_netflix.py
tests/unit/: test_domain.py  test_email.py
tests/unit/sources/: test_medium.py
