[project]
name = "tech-blogs-newsletter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luiz Felipe Manke",email = "luizmanke@gmail.com"},
]
dependencies = [
    "lxml>=5.2.2",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
tests = [
    "requests-mock>=1.12.1",
]
